# PDF-PageTool

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  GITHUB_GUIDE.md  LICENSE  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt  test_drag_drop_debug.py  test_drag_drop_fix.py  test_drop_diagnostic.py  test_file_loading.py  test_linux_drag_drop.py  test_main_app_drag_drop.py  test_minimal_drop.py  test_wayland_file_selector.py
.amazonq/rules/: architecture_patterns.md  coding_standards.md  performance_optimization.md  project_context.md  security_guidelines.md  testing_guidelines.md  ui_development.md
.github/workflows/: ci-cd.yml  dependency-update.yml  quality-check.yml  security-check.yml
doc/: README.md  bug_20250716_UI改善要望.md  bug_report_template.md  known_issues.md  manual_test_guidelines.md  manual_test_issues_20250717.md  pypi_integration_report.md  technical_analysis_report.md  technology_upgrade_plan.md  theme_functionality_status.md
idea/: PDFの分割結合ツールのプロット.md  PDFの分割結合ツールのプロット.txt  UI案.html  UI案.md  UI案.xlsx  UI案の文書化.md  pdf_page_tool_ui.ui
pdf_pagetool/: __init__.py  main.py
pdf_pagetool/pdf_operations/: pdf_handler.py
pdf_pagetool/ui/: __init__.py  batch_processor.py  integrated_theme_manager.py  keyboard_shortcuts.py  main_window.py  main_window_ui.py  page_widgets.py  pdf_pagetool_themes.json  progress_dialog.py  thumbnail_size_dialog.py
pdf_pagetool/utils/: logger.py  settings_manager.py
src/: main.py
src/external_theme_manager/qt/: controller.py
src/pdf_operations/: __init__.py  pdf_handler.py
src/ui/: batch_processor.py  integrated_theme_manager.py  keyboard_shortcuts.py  main_window.py  main_window_ui.py  official_theme_manager.py  page_widgets.py  pdf_pagetool_themes.json  progress_dialog.py  settings_dialog.py  theme_manager.py  theme_settings.json  thumbnail_size_dialog.py
src/utils/: __init__.py  logger.py  settings_manager.py
tests/: README.md  __init__.py  run_all_tests.py
tests/debug/: debug_test.py  test_debug.py
tests/integration/: test_features.py  test_new_features.py  test_theme_functionality.py
tests/unit/: test_official_theme_manager.py
