[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-pagetool"
version = "1.0.0"
description = "Professional PDF page editing tool with intuitive UI"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "Intended Audience :: End Users/Desktop", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Office/Business", "Topic :: Multimedia :: Graphics",]
requires-python = ">=3.11"
dependencies = [ "PyQt6>=6.4.0", "qt-theme-manager>=0.1.0", "PyPDF2>=3.0.0", "pikepdf>=8.0.0", "pdf2image>=1.16.0", "Pillow>=9.0.0", "python-dotenv>=1.0.0", "colorlog>=6.7.0",]
license = "MIT"

[[project.authors]]
name = "scottlz0310"
email = "scottlz0310@example.com"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-qt>=4.0.0", "ruff>=0.1.0", "mypy>=1.0.0", "pre-commit>=2.20.0",]
test = [ "pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-qt>=4.0.0",]

[project.urls]
Homepage = "https://github.com/scottlz0310/PDF-PageTool"
Repository = "https://github.com/scottlz0310/PDF-PageTool"
Issues = "https://github.com/scottlz0310/PDF-PageTool/issues"

[project.scripts]
pdf-pagetool = "src.main:main"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true
exclude = [ "venv/", "build/", "dist/", "tests/debug/",]

[[tool.mypy.overrides]]
module = "src.ui.*"
disallow_untyped_defs = false
disallow_any_expr = false
disallow_any_explicit = false
no_implicit_reexport = false
disable_error_code = ["misc", "no-any-return", "assignment", "attr-defined", "arg-type"]

[[tool.mypy.overrides]]
module = "PyQt6.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "tests.debug.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = [ "tests", "test_*",]
skips = [ "B101", "B601",]

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "B", "C4", "UP",]
ignore = [ "E501", "B008", "C901",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit.assert_used]
skips = [ "*_test.py", "test_*.py",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = [ "src",]
omit = [ "*/tests/*", "*/venv/*", "*/build/*",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if __name__ == .__main__.:",]

[tool.secuority.safety]
ignore = []
full_report = true
output = "json"
continue_on_error = false

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "src*",]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "ruff>=0.12.12",
    "safety>=3.6.2",
]
