[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-pagetool"
version = "1.0.0"
description = "Professional PDF page editing tool with intuitive UI"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "Intended Audience :: End Users/Desktop", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Topic :: Office/Business", "Topic :: Multimedia :: Graphics",]
requires-python = ">=3.11"
dependencies = [ "PyQt6>=6.10.1", "qt-theme-manager>=1.1.0", "pypdf>=6.5.0", "pikepdf>=10.0.3", "pdf2image>=1.17.0", "Pillow>=12.0.0", "python-dotenv>=1.2.1", "colorlog>=6.10.1",]
license = "MIT"

[[project.authors]]
name = "scottlz0310"
email = "scottlz0310@example.com"


[project.urls]
Homepage = "https://github.com/scottlz0310/PDF-PageTool"
Repository = "https://github.com/scottlz0310/PDF-PageTool"
Issues = "https://github.com/scottlz0310/PDF-PageTool/issues"

[project.scripts]
pdf-pagetool = "pdf_pagetool.main:main"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true
exclude = [ "venv/", "build/", "dist/", "tests/debug/",]
packages = ["pdf_pagetool"]

[[tool.mypy.overrides]]
module = "pdf_pagetool.ui.*"
disallow_untyped_defs = false
disallow_any_expr = false
disallow_any_explicit = false
no_implicit_reexport = false
disable_error_code = ["misc", "no-any-return", "assignment", "attr-defined", "arg-type"]

[[tool.mypy.overrides]]
module = "pdf_pagetool.pdf_operations.*"
disable_error_code = ["no-redef", "misc", "assignment"]

[[tool.mypy.overrides]]
module = "PyQt6.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "tests.debug.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = [ "tests", "test_*", ".venv", "venv", "build", "dist", ".git", "__pycache__", "*.egg-info",]
skips = [ "B101", "B601",]

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "B", "C4", "UP",]
ignore = [ "E501", "B008", "C901",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit.assert_used]
skips = [ "*_test.py", "test_*.py",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
addopts = "--cov=pdf_pagetool --cov-report=term-missing --cov-report=html"
qt_api = "pyqt6"
env = [
    "QT_QPA_PLATFORM=offscreen",
]

[tool.coverage.run]
source = [ "pdf_pagetool",]
omit = [ "*/tests/*", "*/venv/*", "*/build/*",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if __name__ == .__main__.:",]

[tool.secuority.safety]
ignore = []
full_report = true
output = "json"
continue_on_error = false

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "pdf_pagetool*",]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-qt>=4.5.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "safety>=3.7.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-qt>=4.5.0",
]
